<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="imagez" type="id"/>
    <item name="name" type="id"/>
    <item name="clickbox" type="id"/>
    <item name="ListLeagueTabLayout" type="id"/>
    <item name="ListLeagueViewpager" type="id"/>
    <item name="HomeScore" type="id"/>
    <item name="AwayScore" type="id"/>
    <item name="Marker" type="id"/>
    <item name="strHomeGoal" type="id"/>
    <item name="strHomeRedCards" type="id"/>
    <item name="strHomeYellowCards" type="id"/>
    <item name="strHomeLineupGoalkeeper" type="id"/>
    <item name="RedCards" type="id"/>
    <item name="YellowCard" type="id"/>
    <item name="GoalKeeper" type="id"/>
    <item name="Midfield" type="id"/>
    <item name="strHomeLineupMidfield" type="id"/>
    <item name="Subtitute" type="id"/>
    <item name="strHomeLineupSubstitutes" type="id"/>
    <item name="Formation" type="id"/>
    <item name="strHomeFormation" type="id"/>
    <item name="Defense" type="id"/>
    <item name="strHomeLineupDefense" type="id"/>
    <item name="Forward" type="id"/>
    <item name="strHomeLineupForward" type="id"/>
    <item name="Shots" type="id"/>
    <item name="Date" type="id"/>
    <item name="intHomeShots" type="id"/>
    <item name="search" type="id"/>
    <item name="Score" type="id"/>
    <item name="homeTeamImage" type="id"/>
    <item name="recylerVieww" type="id"/>
    <item name="header" type="id"/>
    <item name="total" type="id"/>
    <item name="loss" type="id"/>
    <item name="draw" type="id"/>
    <item name="win" type="id"/>
    <item name="manager" type="id"/>
</resources>