...
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>

    <string-array name="club_name">
        <item>English Premier League</item>
        <item>French Ligue</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Portugeuse Premiera Liga</item>
...
